modified some links in the login directory

--- a/sign-in/assets/css/style.css
+++ b/sign-in/assets/css/style.css
@@ -13,7 +13,7 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background-image: url('../../../general/images/Mask\ Group\ 129.png');
+    background-image: url('../../../ingredient-general/images/Mask\ Group\ 129.png');
 }
 
 .clique::-webkit-scrollbar-track
