--- a/app/css/register.css
+++ b/app/css/register.css
@@ -13,6 +13,18 @@
 .clique * {
   transition: width, opacity, padding, transform, margin 0.3s linear;
 }
+@media screen and (max-width: 780px) {
+  .clique {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .clique {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
 .clique::after {
   top: 0;
   left: 0;
@@ -39,6 +51,16 @@
   margin-top: 4.2rem;
   transition: all 0.3s linear;
 }
+@media screen and (min-height: 1000px) and (min-width: 781px) {
+  .clique-branch {
+    margin-top: 10.6rem;
+  }
+}
+@media screen and (min-height: 1300px) {
+  .clique-branch {
+    margin-top: 13rem;
+  }
+}
 .clique-modal {
   z-index: 1;
   padding: 1.4rem 11.4rem;
@@ -46,6 +68,39 @@
   position: relative;
   transition: all 0.3s linear;
   margin-top: 8.1rem;
+}
+@media screen and (min-height: 1000px) and (min-width: 781px) {
+  .clique-modal {
+    padding: 4.5rem 11.4rem;
+  }
+}
+@media screen and (min-height: 1300px) {
+  .clique-modal {
+    padding: 6.5rem 11.4rem;
+  }
+}
+@media screen and (max-width: 950px) {
+  .clique-modal {
+    padding: 1.4rem 6.4rem;
+  }
+}
+@media screen and (max-width: 850px) {
+  .clique-modal {
+    padding: 1.4rem 3.4rem;
+  }
+}
+@media screen and (max-width: 780px) {
+  .clique-modal {
+    width: 100%;
+    padding: 1.4rem 3.4rem;
+  }
+}
+@media screen and (max-width: 500px) {
+  .clique-modal {
+    width: 100%;
+    margin-top: 5.1rem;
+    padding: 1.4rem 2rem;
+  }
 }
 .clique-modal::after {
   content: "";
@@ -57,6 +112,11 @@
   border-radius: 5rem;
   border-left: 5px solid #707070;
 }
+@media screen and (max-width: 780px) {
+  .clique-modal::after {
+    display: none;
+  }
+}
 .clique-modal__title {
   color: white;
   margin-top: 1rem;
@@ -67,11 +127,36 @@
 .clique-modal .register-group-fields {
   margin-top: 2.6rem;
 }
+@media screen and (min-height: 1000px) and (min-width: 781px) {
+  .clique-modal .register-group-fields {
+    margin-top: 3.5rem;
+  }
+}
+@media screen and (min-height: 1300px) {
+  .clique-modal .register-group-fields {
+    margin-top: 4.5rem;
+  }
+}
 .clique-modal .register-group-fields__row {
   display: flex;
   align-items: center;
   margin: 0 -0.75rem;
   justify-content: center;
+}
+@media screen and (min-height: 1000px) and (min-width: 781px) {
+  .clique-modal .register-group-fields__row {
+    margin-bottom: 1rem;
+  }
+}
+@media screen and (min-height: 1300px) {
+  .clique-modal .register-group-fields__row {
+    margin-bottom: 1.3rem;
+  }
+}
+@media screen and (max-width: 780px) {
+  .clique-modal .register-group-fields__row {
+    flex-direction: column;
+  }
 }
 .clique-modal .register-group-fields__row .register-field {
   padding: 10px 12px;
@@ -80,6 +165,18 @@
   margin: 1rem 0.75rem;
   flex-direction: column;
   background-color: var(--white-color);
+}
+@media screen and (max-width: 780px) {
+  .clique-modal .register-group-fields__row .register-field {
+    width: 100%;
+    padding: 10px 20px !important;
+    margin: 0.7rem 0.75rem;
+  }
+}
+@media screen and (max-width: 500px) {
+  .clique-modal .register-group-fields__row .register-field {
+    margin: 0.5rem 0.75rem;
+  }
 }
 .clique-modal .register-group-fields__row .register-field > label {
   font-size: 1.2rem;
@@ -93,12 +190,15 @@
   line-height: 2.7rem;
   color: var(--black-color);
 }
-.clique-modal .register-group-fields__row .field-description {
-  padding: 12px;
-  width: 100%;
+@media screen and (min-height: 1300px) {
+  .clique-modal .register-group-fields__row .register-field__input {
+    height: 3rem;
+  }
 }
-.clique-modal .register-group-fields__row .field-description > label {
-  margin-bottom: 1px;
+@media screen and (max-width: 780px) {
+  .clique-modal .register-group-fields__row .register-field__input {
+    width: 100%;
+  }
 }
 .clique-modal .register-group-fields__row .input--description {
   width: 100%;
@@ -109,6 +209,13 @@
   display: none;
   font-family: Helvetica, sans-serif;
 }
+.clique-modal .register-group-fields__row .field-description {
+  padding: 12px;
+  width: 100%;
+}
+.clique-modal .register-group-fields__row .field-description > label {
+  margin-bottom: 1px;
+}
 .clique-modal .register-group-fields .register-optional {
   width: 100%;
   display: flex;
@@ -118,6 +225,16 @@
   align-items: center;
   color: var(--white-color);
   justify-content: space-between;
+}
+@media screen and (min-height: 1000px) and (min-width: 781px) {
+  .clique-modal .register-group-fields .register-optional {
+    margin-top: 2rem;
+  }
+}
+@media screen and (min-height: 1300px) {
+  .clique-modal .register-group-fields .register-optional {
+    margin-top: 3rem;
+  }
 }
 .clique-modal .register-group-fields .register-optional-item {
   flex: 1;
@@ -136,6 +253,11 @@
   border: 1px solid white;
   background-color: rgba(0, 0, 0, 0);
 }
+@media screen and (max-width: 500px) {
+  .clique-modal .register-group-fields .register-optional--back {
+    margin-right: 0.5rem;
+  }
+}
 .clique-modal .register-group-fields .register-optional--back:hover {
   background-color: rgba(0, 0, 0, 0.6);
 }
@@ -144,12 +266,22 @@
   border: 1px solid #2F9A4C;
   background-color: #2F9A4C;
 }
+@media screen and (max-width: 500px) {
+  .clique-modal .register-group-fields .register-optional--next {
+    margin-left: 0.5rem;
+  }
+}
 .clique-already {
   z-index: 1;
   color: #B9C0BE;
   font-size: 1.6rem;
   margin: 3.4rem 0 5.4rem 0;
   position: relative;
+}
+@media screen and (min-height: 1000px) and (min-width: 781px) {
+  .clique-already {
+    margin: 9.4rem 0 12.4rem 0;
+  }
 }
 .clique-already > a {
   color: #E60A17;
@@ -165,26 +297,25 @@
   position: absolute;
   flex-direction: column;
 }
+@media screen and (max-width: 780px) {
+  .clique-recaptcha {
+    display: none;
+  }
+}
 .clique-recaptcha > img {
   width: 7rem;
   height: 7.6rem;
+}
+@media screen and (max-width: 950px) {
+  .clique-recaptcha > img {
+    width: 5rem;
+    height: 5.6rem;
+  }
 }
 .clique-recaptcha > span {
   color: #545454;
   font-size: 1.1rem;
   line-height: 1.5rem;
-}
-
-body::-webkit-scrollbar {
-  width: 6px;
-  background-color: #F5F5F5;
-}
-body::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: #b9b9b9;
-}
-body::-webkit-scrollbar-thumb {
-  background-color: #1f1e1e;
 }
 
 /*# sourceMappingURL=register.css.map */
