--- a/app/scss/pages/_register.scss
+++ b/app/scss/pages/_register.scss
@@ -1,9 +1,10 @@
+@import "../abstracts/all";
 
 .clique {
     * {
         transition: width, opacity, padding, transform, margin 0.3s linear;
     }
-
+    
     width: 100%;
     overflow-x: hidden;
     position: relative;
@@ -14,6 +15,16 @@
     background-position: center;
     background-repeat: no-repeat;
     background-image: url('../images/Mask\ Group\ 129.png');
+
+    @include maxWidth(780px) {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    @include maxWidth(500px) {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
 
     &::after {
         top: 0;
@@ -42,6 +53,15 @@
         position: relative;
         margin-top: 4.2rem;
         transition: all 0.3s linear;
+
+        @include minWidthHieght(1000px, 781px) {
+            margin-top: 10.6rem;
+        }
+
+        @include minHeight(1300px) {
+            margin-top: 13rem;
+        }
+    
     }
     
     &-modal {
@@ -52,6 +72,33 @@
         transition: all 0.3s linear;
         margin-top: 8.1rem;
 
+        @include minWidthHieght(1000px, 781px) {
+            padding: 4.5rem 11.4rem;
+        }
+
+        @include minHeight(1300px) {
+            padding: 6.5rem 11.4rem;
+        }
+
+        @include maxWidth(950px) {
+            padding: 1.4rem 6.4rem;
+        }
+
+        @include maxWidth(850px) {
+            padding: 1.4rem 3.4rem;
+        }
+
+        @include maxWidth(780px) {
+            width: 100%;
+            padding: 1.4rem 3.4rem;
+        }
+
+        @include maxWidth(500px) {
+            width: 100%;
+            margin-top: 5.1rem;
+            padding: 1.4rem 2rem;
+        }
+
         &::after {
             content: "";
             display: block;
@@ -59,6 +106,10 @@
             position: absolute; top: 17%; right: 1.4rem;
             border-radius: 5rem;
             border-left: 5px solid #707070;
+        
+            @include maxWidth(780px) {
+                display: none;
+            }
         }
 
         &__title {
@@ -72,11 +123,31 @@
         .register-group-fields {
             margin-top: 2.6rem;
 
+            @include minWidthHieght(1000px, 781px) {
+                margin-top: 3.5rem;
+            }
+
+            @include minHeight(1300px) {
+                margin-top: 4.5rem;
+            }
+
             &__row {
                 display: flex;
                 align-items: center;
                 margin: 0 -0.75rem;
                 justify-content: center;
+
+                @include minWidthHieght(1000px, 781px) {
+                    margin-bottom: 1rem;
+                }
+
+                @include minHeight(1300px) {
+                    margin-bottom: 1.3rem;
+                }
+
+                @include maxWidth(780px) {
+                    flex-direction: column;
+                }
 
                 .register-field {
                     padding: 10px 12px;
@@ -85,7 +156,17 @@
                     margin: 1rem 0.75rem;
                     flex-direction: column;
                     background-color: var(--white-color);
-                
+
+                    @include maxWidth(780px) {
+                        width: 100%;
+                        padding: 10px 20px !important;
+                        margin: 0.7rem 0.75rem;
+                    }
+
+                    @include maxWidth(500px) {
+                        margin: 0.5rem 0.75rem;
+                    }   
+
                     > label{
                         font-size: 1.2rem;
                         display: inline-block;
@@ -98,14 +179,14 @@
                         font-size: 1.6rem;
                         line-height: 2.7rem;
                         color: var(--black-color);
-                    }
-                }
+                   
+                        @include minHeight(1300px) {
+                            height: 3rem;
+                        }
 
-                .field-description {
-                    padding: 12px;
-                    width: 100%;
-                    > label {
-                        margin-bottom: 1px;
+                        @include maxWidth(780px) {
+                            width: 100%;
+                        }
                     }
                 }
 
@@ -119,6 +200,14 @@
                         font-family: Helvetica, sans-serif;
                     }
                 }
+
+                .field-description {
+                    padding: 12px;
+                    width: 100%;
+                    > label {
+                        margin-bottom: 1px;
+                    }
+                }
             }
 
             .register-optional {
@@ -130,6 +219,14 @@
                 align-items: center;
                 color: var(--white-color);
                 justify-content: space-between;
+
+                @include minWidthHieght(1000px, 781px) {
+                    margin-top: 2rem;
+                }
+
+                @include minHeight(1300px) {
+                    margin-top: 3rem;
+                }
 
                 &-item {
                     flex: 1;
@@ -150,6 +247,10 @@
                     border: 1px solid white;
                     background-color: rgba(0, 0, 0, 0);
                
+                    @include maxWidth(500px) {
+                        margin-right: 0.5rem;
+                    }
+
                     &:hover {
                         background-color: rgba(0, 0, 0, 0.6);
                     }
@@ -159,6 +260,10 @@
                     margin-left: 1rem;
                     border: 1px solid #2F9A4C;
                     background-color: #2F9A4C;
+
+                    @include maxWidth(500px) {
+                        margin-left: 0.5rem;
+                    }
                 }
             }
         }
@@ -170,6 +275,10 @@
         font-size: 1.6rem;
         margin: 3.4rem 0 5.4rem 0;
         position: relative;
+
+        @include minWidthHieght(1000px, 781px) {
+            margin: 9.4rem 0 12.4rem 0;
+        }
 
         > a{
             color: #E60A17;
@@ -188,9 +297,18 @@
         position: absolute;
         flex-direction: column;
 
+        @include maxWidth(780px) {
+            display: none;
+        }
+
         > img{
             width: 7rem;
             height: 7.6rem;
+
+            @include maxWidth(950px) {
+                width: 5rem;
+                height: 5.6rem;
+            }
         }
 
         > span{
@@ -198,22 +316,6 @@
             font-size: 1.1rem;
             line-height: 1.5rem;
         }
-    }
-}
-
-body {
-    &::-webkit-scrollbar {
-        width: 6px;
-        background-color: #F5F5F5;
-    }
-    
-    &::-webkit-scrollbar-track {
-        box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-        background-color: #b9b9b9;
-    }
-    
-    &::-webkit-scrollbar-thumb {
-        background-color: #1f1e1e;
     }
 }
 
