--- a/app/scss/pages/_home.scss
+++ b/app/scss/pages/_home.scss
@@ -455,7 +455,7 @@
                 transition: all 0.1s linear;
                 border-radius: 5px 5px 7px 7px;
                 box-shadow: 0 3px 6px 1px rgba(0, 0, 0, 0.1);
-            
+
                 &:hover {
                     cursor: pointer;
                     box-shadow: 0 4px 8px 1px rgba(0, 0, 0, 0.2);
@@ -601,6 +601,10 @@
 
                         svg{
                             margin-right: 0.8rem;
+                            
+                            path {
+                                transition: all 0.1s linear;
+                            }
                         }
                     }
                 }
