--- a/app/scss/pages/_home.scss
+++ b/app/scss/pages/_home.scss
@@ -384,6 +384,10 @@
                     }
                 }
 
+                .category-item.active {
+                    color: rgb(235, 33, 33);
+                }
+
                 .category-item {
                     height: 100%;
                     margin: 0 3.5rem;
@@ -393,9 +397,11 @@
                     text-align: center;
                     line-height: 2.5rem;
                     transition: all 0.1s linear;
+                    transition: color 0.2s linear;
 
                     &:hover {
                         cursor: pointer;
+                        color: rgb(235, 33, 33);
                     }
 
                     @include maxWidth(1150px) {
