Make API call to list of posts and favourite/unfavourite post

--- a/app/css/home.css
+++ b/app/css/home.css
@@ -561,7 +561,7 @@
   margin-left: 0.6rem;
 }
 .home-content__post-container .home-content-post .home-post-content__header .post-content-option {
-  width: 1.3rem;
+  min-width: 1.3rem;
   color: #536876;
 }
 .home-content__post-container .home-content-post .home-post-content__score {
@@ -625,6 +625,68 @@
 }
 .home-content__post-container .home-content-post .home-post-footer__heart svg path {
   transition: all 0.1s linear;
+}
+
+.notify-not-updated {
+  top: 20%;
+  left: 50%;
+  display: none;
+  position: fixed;
+  border-radius: 6px;
+  flex-direction: row;
+  align-items: center;
+  padding: 1.6rem 2.2rem;
+  justify-content: center;
+  background-color: white;
+  animation-fill-mode: forwards;
+  border: 1.5px solid #ffaf01;
+  transform: translate(-50%, -50%);
+  animation: showAndHide 3s linear;
+  box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.2);
+}
+@media screen and (max-width: 600px) {
+  .notify-not-updated {
+    padding: 1.2rem 1.4rem;
+  }
+}
+.notify-not-updated > svg {
+  width: 2.6rem;
+  height: 2.6rem;
+  color: #ffaf01;
+  margin-right: 1.8rem;
+}
+@media screen and (max-width: 600px) {
+  .notify-not-updated > svg {
+    min-width: 3.2rem;
+    margin-right: 1.5rem;
+  }
+}
+.notify-not-updated > span {
+  color: #333333;
+  font-size: 1.4rem;
+}
+@media screen and (max-width: 600px) {
+  .notify-not-updated > span {
+    font-size: 1.5rem;
+  }
+}
+@keyframes showAndHide {
+  0% {
+    opacity: 0;
+    visibility: hidden;
+  }
+  3% {
+    opacity: 1;
+    visibility: visible;
+  }
+  97% {
+    opacity: 1;
+    visibility: visible;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
 }
 
 /*# sourceMappingURL=home.css.map */
