--- a/app/scss/pages/_home.scss
+++ b/app/scss/pages/_home.scss
@@ -577,7 +577,7 @@
                         }
 
                         .post-content-option {
-                            width: 1.3rem;
+                            min-width: 1.3rem;
                             color: #536876;
                         }
                     }
@@ -660,6 +660,68 @@
                     }
                 }
             }
+        }
+    }
+}
+
+.notify-not-updated {
+    top: 20%;
+    left: 50%;
+    display: none;
+    position: fixed;
+    border-radius: 6px;
+    flex-direction: row;
+    align-items: center;
+    padding: 1.6rem 2.2rem;
+    justify-content: center;
+    background-color: white;
+    animation-fill-mode: forwards;
+    border: 1.5px solid #ffaf01;
+    transform: translate(-50%, -50%);
+    animation: showAndHide 3s linear;
+    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.2);
+
+    @include maxWidth(600px) {
+        padding: 1.2rem 1.4rem;
+    }
+
+    > svg {
+        width: 2.6rem;
+        height: 2.6rem;
+        color: #ffaf01;
+        margin-right: 1.8rem;
+
+        @include maxWidth(600px) {
+            min-width: 3.2rem;
+            margin-right: 1.5rem;
+        }
+    }
+
+    > span {
+        color: #333333;
+        font-size: 1.4rem;
+
+        @include maxWidth(600px) {
+            font-size: 1.5rem;
+        }
+    }
+
+    @keyframes showAndHide {
+        0% {
+            opacity: 0;
+            visibility: hidden;
+        }
+        3% {
+            opacity: 1;
+            visibility: visible;
+        }
+        97% {
+            opacity: 1;
+            visibility: visible;
+        }
+        100% {
+            opacity: 0;
+            visibility: hidden;
         }
     }
 }
